--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   firebase_core: ^0.4.0+9
 
 
-
-
+  google_sign_in: ^5.0.1
+  flutter_facebook_login: ^3.0.0
   js: ^0.6.2
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.12.9+5
