--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.4.0+9
 
-
+  grouped_buttons: ^1.0.4
   google_sign_in: ^5.0.1
   flutter_facebook_login: ^3.0.0
   js: ^0.6.2
