--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,14 @@ flutter:
     - images/login.png
     - images/admin.png
     - images/cash.png
+    - images/tshirt.png
+    - images/Jacket.png
+    - images/jeans.png
+    - images/trousers2.png
+    - images/hooded-jacket.png
+    - images/sneakers.png
+    - images/shorts.png
+    - images/bags.png
 
 
 
