--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   provider: ^4.0.4
   path_provider: ^0.5.0+1
+  flutter_slidable: ^0.6.0
   image: ^2.0.7
   intl:
 
@@ -57,6 +58,7 @@ flutter:
     - images/sneakers.png
     - images/shorts.png
     - images/bags.png
+    - images/emptyCart.png
 
 
 
