Change App Name & Fix Bugs (Osama)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
 
         android:name="io.flutter.app.FlutterApplication"
-        android:label="e_shop"
+        android:label="E-Clothes"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
