--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.4.0+9
 
+
   grouped_buttons: ^1.0.4
   google_sign_in: ^5.0.1
   flutter_facebook_login: ^3.0.0
@@ -27,6 +28,7 @@ dependencies:
   path_provider: ^0.5.0+1
   flutter_slidable: ^0.6.0
   image: ^2.0.7
+  full_screen_image: ^1.0.2
   intl:
 
 
@@ -59,6 +61,7 @@ flutter:
     - images/shorts.png
     - images/bags.png
     - images/emptyCart.png
+    - images/address.png
 
 
 
