--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   js: ^0.6.2
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.12.9+5
+  firebase_messaging: ^5.1.4
   firebase_auth: ^0.14.0+5
   shared_preferences: ^0.5.6+1
   fluttertoast: ^3.1.3
