--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^0.5.0+1
   flutter_slidable: ^0.6.0
   image: ^2.0.7
+  page_transition: ^2.0.2
   full_screen_image: ^1.0.2
   intl:
 
