--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   image: ^2.0.7
   page_transition: ^2.0.2
   full_screen_image: ^1.0.2
+  firebase_messaging: ^10.0.0
+  firebase_analytics: ^8.0.0
+
   intl:
 
 
@@ -64,6 +67,10 @@ flutter:
     - images/bags.png
     - images/emptyCart.png
     - images/address.png
+    - images/MEN.jpg
+    - images/WOMAN.jpg
+    - images/KIDS.jpg
+    - images/USED.jpg
 
 
 
