--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   full_screen_image: ^1.0.2
   firebase_messaging: ^10.0.0
   firebase_analytics: ^8.0.0
+  flutter_rating_bar: ^4.0.0
+
 
   intl:
 
