fix much bugs and add size(osama)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_messaging: ^10.0.0
   firebase_analytics: ^8.0.0
   flutter_rating_bar: ^4.0.0
+  progress_dialog: ^1.2.4
+
 
 
   intl:
