--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_sign_in: ^5.0.1
   flutter_facebook_login: ^3.0.0
   js: ^0.6.2
+  im_stepper: ^0.1.3
   cupertino_icons: ^0.1.2
   cloud_firestore: ^2.2.0
   cloud_firestore_web: ^2.1.0
@@ -34,7 +35,6 @@ dependencies:
   firebase_messaging: ^10.0.0
   firebase_analytics: ^8.0.0
   flutter_rating_bar: ^4.0.0
-  progress_dialog: ^1.2.4
 
 
 
