--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,15 @@ dependencies:
 
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.8.1
+
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/icon.jpeg"
 
 flutter:
   uses-material-design: true
@@ -55,6 +61,7 @@ flutter:
         - asset: assets/fonts/SourceSansPro-Regular.ttf
 
   assets:
+    - images/icon.jpeg
     - images/google.png
     - images/facebook.png
     - images/welcome.png
